--- a/articles/styles.css
+++ b/articles/styles.css
@@ -25,24 +25,14 @@ header {
 nav {
     background-color: var(--secondary-color);
     padding: 0.5rem 0;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-}
-
-nav ul li {
-    margin: 0 1rem;
+    text-align: center;
 }
 
 nav a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    margin: 0 1rem;
 }
 
 .container {
